--- a/src/main/resources/static/custom.css
+++ b/src/main/resources/static/custom.css
@@ -1,3 +1,10 @@
 .customline {
   text-decoration: line-through;
 }
+
+.custombody{
+  background : url("stark.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+
+}
