Ajout conf json

--- a/src/main/resources/static/custom.css
+++ b/src/main/resources/static/custom.css
@@ -4,7 +4,6 @@
 
 .custombody{
   background : url("stark.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-size: initial;
 
 }
